--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <p>Fresher</p>
             <p>QIS COLLEGE OF ENGINEERING AND TECHNOLOGY</p>
             <p>Skills: Java,Html,Css,JavaSCript,Sql,Bootsrap</p>
-            <a href="KonikinagasrivalliAkshitha_Resume.pdf" class=" text-decoration-none">Download my Resume</a>
+            <a href="" class=" text-decoration-none">Download my Resume</a>
         </div>
     </div>
     <div class="div-grp d-flex mt-5 fs-4 text-center gap-3">
@@ -126,3 +126,4 @@
 
 
 </html>
+
